syntax = "proto3";
package web3;

message H2048 {
  bytes bytes = 1;
}
